src/objects/LedgerEntry__c.object
<CustomObject>
    <fields>
        <fullName>RollUpGrossRevenueAtSellout__c</fullName>
        <label>Roll-Up Gross Revenue At Sellout</label>
        <summarizedField>LedgerEntryBreakout__c.GrossRevenueatSellout__c</summarizedField>
        <summaryForeignKey>LedgerEntryBreakout__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpGrossRevenue__c</fullName>
        <label>Roll-Up Gross Revenue</label>
        <summarizedField>LedgerEntryBreakout__c.GrossRevenue__c</summarizedField>
        <summaryForeignKey>LedgerEntryBreakout__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpInHouseAtSellout__c</fullName>
        <label>Roll-Up In House at Sellout</label>
        <summarizedField>LedgerEntryBreakout__c.InHouseatSellout__c</summarizedField>
        <summaryForeignKey>LedgerEntryBreakout__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpInHouseProjection__c</fullName>
        <label>Roll-Up In House Projection</label>
        <summarizedField>LedgerEntryBreakout__c.InHouseProjection__c</summarizedField>
        <summaryForeignKey>LedgerEntryBreakout__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpLNTouringAmount__c</fullName>
        <label>Roll-Up LN Touring Amount</label>
        <summarizedField>LedgerEntryBreakout__c.LNTouringAmount__c</summarizedField>
        <summaryForeignKey>LedgerEntryBreakout__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpNetPerPaid__c</fullName>
        <label>Roll-Up Net Per Paid</label>
        <summarizedField>LedgerEntryBreakout__c.NetPerPaid__c</summarizedField>
        <summaryForeignKey>LedgerEntryBreakout__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpNetRevenueAtSellout__c</fullName>
        <label>Roll-Up Net Revenue At Sellout</label>
        <summarizedField>LedgerEntryBreakout__c.NetRevenueatSellout__c</summarizedField>
        <summaryForeignKey>LedgerEntryBreakout__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpNetRevenue__c</fullName>
        <label>Roll-Up Net Revenue</label>
        <summarizedField>LedgerEntryBreakout__c.Net_Revenue__c</summarizedField>
        <summaryForeignKey>LedgerEntryBreakout__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpOfferAtProjection__c</fullName>
        <label>Roll-Up Offer At Projection</label>
        <summarizedField>LedgerEntryBreakout__c.OfferAtProjection__c</summarizedField>
        <summaryForeignKey>LedgerEntryBreakout__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpOfferAtSellout__c</fullName>
        <label>Roll-Up Offer At Sellout</label>
        <summarizedField>LedgerEntryBreakout__c.OfferAtSellout__c</summarizedField>
        <summaryForeignKey>LedgerEntryBreakout__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpOriginalFlash__c</fullName>
        <label>Roll-Up Original Flash</label>
        <summarizedField>LedgerEntryBreakout__c.OriginalFlash__c</summarizedField>
        <summaryForeignKey>LedgerEntryBreakout__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpPromoterAmount__c</fullName>
        <label>Roll-Up Promoter Amount</label>
        <summarizedField>LedgerEntryBreakout__c.PromoterAmount__c</summarizedField>
        <summaryForeignKey>LedgerEntryBreakout__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpSettlement__c</fullName>
        <label>Roll-Up Settlement</label>
        <summarizedField>LedgerEntryBreakout__c.Settlement__c</summarizedField>
        <summaryForeignKey>LedgerEntryBreakout__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpVenueAmount__c</fullName>
        <label>Roll-Up Venue Amount</label>
        <summarizedField>LedgerEntryBreakout__c.VenueAmount__c</summarizedField>
        <summaryForeignKey>LedgerEntryBreakout__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SelectedTicketScale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected Ticket Scale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SettleAtActual__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Settle At Actual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SettlementCalculationFilter__c</fullName>
        <formula>Event__c+&apos;|&apos;+IF(GLAccount__r.SettlementCalculation__c == true, &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Settlement Calculation Filter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SettlementExpenseVariance__c</fullName>
        <formula>OfferAtSellout__c -  Settlement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Settlement Expense Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettlementNotes__c</fullName>
        <label>Settlement Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SettlementRateType__c</fullName>
        <label>Settlement Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Per Drop Count</fullName>
                </value>
                <value>
                    <fullName>Per Paid Ticket</fullName>
                </value>
                <value>
                    <fullName>% of Net Gross</fullName>
                </value>
                <value>
                    <fullName>% of Gross</fullName>
                </value>
                <value>
                    <fullName>% of Adjusted Gross</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Settlement__c</fullName>
        <label>Settlement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TE__c</fullName>
        <label>T&amp;E</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TicketScaleList__c</fullName>
        <label>Ticket Scale List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TotalTSO__c</fullName>
        <formula>TourRep__c +  TE__c + PerDiems__c + EndofTourDinner__c +  MiscExpense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total TSO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TourLENoDeleteWhenOnTour__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the Tour Ledger Entry 50360 is Associated with an Event and Associated with a Tour</description>
        <label>Tour LE No Delete When On Tour</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TourRep__c</fullName>
        <label>Tour Rep</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UniqueEventLedgerKey__c</fullName>
        <description>Concatenates the GL Account, Event, and Event Date Time fields</description>
        <formula>GLAccount__r.GLCode__c &amp; $Setup.DataGenerationSettings__c.CombinedKeyDelimiter__c &amp;
Event__r.Name          &amp; $Setup.DataGenerationSettings__c.CombinedKeyDelimiter__c &amp;
EventDateTime__r.Name</formula>
        <label>Unique Event Ledger Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VenueAmountRate__c</fullName>
        <label>Venue Amount/Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VenueAmount__c</fullName>
        <label>Venue Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VenueMax__c</fullName>
        <label>Venue Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VenueMin__c</fullName>
        <label>Venue Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VenueOwnership__c</fullName>
        <description>Drives sharing rules to provide edit access to booking members of the venue&apos;s primary office when Owned/Operated</description>
        <label>Venue Ownership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VenueRateType__c</fullName>
        <label>Venue Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Per Drop Count</fullName>
                </value>
                <value>
                    <fullName>Per Paid Ticket</fullName>
                </value>
                <value>
                    <fullName>% of Net Gross</fullName>
                </value>
                <value>
                    <fullName>% of Gross</fullName>
                </value>
                <value>
                    <fullName>% of Adjusted Gross</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X3rdPartyPercent__c</fullName>
        <label>3rd Party %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fxArtistAmount__c</fullName>
        <formula>(ArtistAmount__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Artist Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxArtistMax__c</fullName>
        <formula>(ArtistMax__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Artist Max (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxArtistMin__c</fullName>
        <formula>(ArtistMin__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Artist Min (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxBaseAmount__c</fullName>
        <formula>(BaseAmount__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Base Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxCOGSAtForecast__c</fullName>
        <formula>(COGSAtForecast__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>COGS At Forecast (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxCOGSAtSellout__c</fullName>
        <formula>(COGSAtSellout__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>COGS At Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxContraAmount__c</fullName>
        <formula>(ContraAmount__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Contra Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxContraAtForecast__c</fullName>
        <formula>(ContraAtForecast__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Contra At Forecast (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxContraatSellout__c</fullName>
        <formula>(ContraatSellout__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Contra at Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxCurrentFlashFormula__c</fullName>
        <formula>(CurrentFlashFormula__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Current Flash Formula (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxCurrentFlash__c</fullName>
        <formula>(CurrentFlash__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Current Flash (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxEndofTourDinner__c</fullName>
        <formula>(EndofTourDinner__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>End of Tour Dinner (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxExpenseAdjustment__c</fullName>
        <formula>(ExpenseAdjustment__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Expense Adjustment (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxExpenseAdjustmentatSellout__c</fullName>
        <formula>(ExpenseAdjustmentatSellout__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Expense Adjustment at Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxFinalForecast__c</fullName>
        <formula>(FinalForecast__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Final Forecast (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxFlashAdjustments__c</fullName>
        <formula>(FlashAdjustments__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Flash Adjustments (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxForecastAmount__c</fullName>
        <formula>(ForecastAmount__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Forecast Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxGrossPerPaid__c</fullName>
        <formula>(GrossPerPaid__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Gross Per Paid (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxGrossRevenue__c</fullName>
        <formula>(GrossRevenue__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Gross Revenue (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxGrossRevenueatSellout__c</fullName>
        <formula>(GrossRevenueatSellout__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Gross Revenue at Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxInHouseMax__c</fullName>
        <formula>(InHouseMax__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>In House Max (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxInHouseMin__c</fullName>
        <formula>(InHouseMin__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>In House Min (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxInHouseProjection__c</fullName>
        <formula>(InHouseProjection__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>In House Projection (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxInHouseatSellout__c</fullName>
        <formula>(InHouseatSellout__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>In House at Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxLNTouringAmount__c</fullName>
        <formula>(LNTouringAmount__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>LN Touring Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxLNTouringMax__c</fullName>
        <formula>(LNTouringMax__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>LN Touring Max (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxLNTouringMin__c</fullName>
        <formula>(LNTouringMin__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>LN Touring Min (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxMax__c</fullName>
        <formula>(Max__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Max (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxMin__c</fullName>
        <formula>(Min__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Min (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxMiscExpense__c</fullName>
        <formula>(MiscExpense__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Misc Expense (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxNetPerPaid__c</fullName>
        <formula>(NetPerPaid__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Net Per Paid (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxNetRevenue__c</fullName>
        <formula>(NetRevenue__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Net Revenue (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxNetRevenueatSellout__c</fullName>
        <formula>(NetRevenueatSellout__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Net Revenue at Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxNonLNEVenueCoProShareAtProjection__c</fullName>
        <formula>(NonLNEVenueCoProShareAtProjection__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Non-LNE Ven CoPro Share At Proj. (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxOfferAtProjection__c</fullName>
        <formula>(OfferAtProjection__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Offer At Projection (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxOfferAtSellout__c</fullName>
        <formula>(OfferAtSellout__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Offer At Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxOfferMax__c</fullName>
        <formula>(OfferMax__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Offer Max (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxOfferMin__c</fullName>
        <formula>(OfferMin__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Offer Min (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxOriginalFlash__c</fullName>
        <formula>(OriginalFlash__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Original Flash (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPerDiems__c</fullName>
        <formula>(PerDiems__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Per Diems (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPlanAmount__c</fullName>
        <formula>(PlanAmount__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Plan Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPrimaryCoProShareAtProjection__c</fullName>
        <formula>(PrimaryCoProShareAtProjection__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Primary Co-Pro Share At Projection (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPrimaryCoProShareAtSellout__c</fullName>
        <formula>(PrimaryCoProShareAtSellout__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Primary Co-Pro Share At Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxProjectionAmount__c</fullName>
        <formula>(ProjectionAmount__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Projection Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPromoterAmount__c</fullName>
        <formula>(PromoterAmount__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Promoter Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPromoterMax__c</fullName>
        <formula>(PromoterMax__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Promoter Max (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPromoterMin__c</fullName>
        <formula>(PromoterMin__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Promoter Min (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpArtistAmount__c</fullName>
        <formula>(RollUpArtistAmount__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll-Up Artist Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpCOGSAtForecast__c</fullName>
        <formula>(RollUpCOGSAtForecast__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll-Up COGS At Forecast (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpCOGSAtSellout__c</fullName>
        <formula>(RollUpCOGSAtSellout__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll-Up COGS At Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpContraAtForecast__c</fullName>
        <formula>(RollUpContraAtForecast__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll-Up Contra At Forecast (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpContraAtSellout__c</fullName>
        <formula>(RollUpContraAtSellout__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll-Up Contra At Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpCurrentFlash__c</fullName>
        <formula>(RollUpCurrentFlash__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll-Up Current Flash (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpExpenseAdjustmentAtSellout__c</fullName>
        <formula>(RollUpExpenseAdjustmentAtSellout__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll-Up Exp Adj at Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpExpenseAdjustment__c</fullName>
        <formula>(RollUpExpenseAdjustment__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll-Up Expense Adjustment (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpGrossPerPaid__c</fullName>
        <formula>(RollUpGrossPerPaid__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll-Up Gross Per Paid (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpGrossRevenueAtSellout__c</fullName>
        <formula>(RollUpGrossRevenueAtSellout__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll-Up Gross Revenue At Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpGrossRevenue__c</fullName>
        <formula>(RollUpGrossRevenue__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll-Up Gross Revenue (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpInHouseAtSellout__c</fullName>
        <formula>(RollUpInHouseAtSellout__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll-Up In House at Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpInHouseProjection__c</fullName>
        <formula>(RollUpInHouseProjection__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll-Up In House Projection (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpLNTouringAmount__c</fullName>
        <formula>(RollUpLNTouringAmount__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll-Up LN Touring Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpNetPerPaid__c</fullName>
        <formula>(RollUpNetPerPaid__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll-Up Net Per Paid (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpNetRevenueAtSellout__c</fullName>
        <formula>(RollUpNetRevenueAtSellout__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll-Up Net Revenue At Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpNetRevenue__c</fullName>
        <formula>(RollUpNetRevenue__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll-Up Net Revenue (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpOfferAtProjection__c</fullName>
        <formula>(RollUpOfferAtProjection__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll-Up Offer At Projection (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpOfferAtSellout__c</fullName>
        <formula>(RollUpOfferAtSellout__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll-Up Offer At Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpOriginalFlash__c</fullName>
        <formula>(RollUpOriginalFlash__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll-Up Original Flash (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpPromoterAmount__c</fullName>
        <formula>(RollUpPromoterAmount__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll-Up Promoter Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpSettlement__c</fullName>
        <formula>(RollUpSettlement__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll-Up Settlement (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpVenueAmount__c</fullName>
        <formula>(RollUpVenueAmount__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll-Up Venue Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementExpenseVariance__c</fullName>
        <formula>(SettlementExpenseVariance__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Expense Variance (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlement__c</fullName>
        <formula>(Settlement__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTE__c</fullName>
        <formula>(TE__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>T&amp;E (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTotalTSO__c</fullName>
        <formula>(TotalTSO__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Total TSO (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTourRep__c</fullName>
        <formula>(TourRep__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Tour Rep (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxVenueAmount__c</fullName>
        <formula>(VenueAmount__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Venue Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>